--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -49,3 +49,7 @@ custom_rules:
     name: "Enum cases on newline"
     regex: "^\\s*case[\\h\\S]*,(?![^(]*\\))[^:]+$"
     message: "Enum cases should always start with a newline."
+  mutators_and_observers_on_newline:
+    name: "Enum cases on newline"
+    regex: "^\\s*[get|set|didSet|willSet][\\h\\S]*\\{[\\h\\S]+?$"
+    message: "Property mutators and observers should always start with a newline."
