--- a/IDETemplateMacros.plist
+++ b/IDETemplateMacros.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>FILEHEADER</key>
 	<string>
-//  Copyright © ___YEAR___ Rosberry. All rights reserved.
+//  Copyright © ___YEAR___ ___ORGANIZATIONNAME___. All rights reserved.
 //</string>
 </dict>
 </plist>
