--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -51,7 +51,7 @@ type_name:
 custom_rules:
   enum_cases_on_newline:
     name: "Enum cases on newline"
-    regex: "^\\s*case[\\h\\S]*,(?![^(]*\\))[^:]+$"
+    regex: "^\\s*case[\\h\\S]*,(?![^(]*\\))[^:|,]+$"
     message: "Enum cases should always start with a newline."
   accessors_and_observers_on_newline:
     name: "Property accessors and observers on newline"
